--- a/server/package.json
+++ b/server/package.json
@@ -4,18 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build-server": "webpack --config webpack.server.js --mode=development"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.14.0",
-    "@babel/preset-react": "^7.13.13",
-    "babel-loader": "^8.2.2",
-    "file-loader": "^6.2.0",
-    "koa": "^2.13.1",
+    "ts-loader": "^9.1.2",
+    "typescript": "^4.2.4",
     "webpack": "^5.36.2",
-    "webpack-cli": "^4.6.0"
+    "webpack-cli": "^4.7.0"
   }
 }
