--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build-server": "webpack --config webpack.server.js --mode=development"
+    "build-env": "webpack --mode=development",
+    "build": "webpack --mode=production"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +14,12 @@
     "@koa/router": "^10.0.0",
     "@types/koa": "^2.13.1",
     "@types/koa__router": "^8.0.4",
+    "@types/react": "^17.0.5",
+    "@types/react-dom": "^17.0.3",
+    "file-loader": "^6.2.0",
     "koa": "^2.13.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "ts-loader": "^9.1.2",
     "typescript": "^4.2.4",
     "webpack": "^5.36.2",
