--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "npm-run-all --parallel build-watch nodemon",
     "build-env": "webpack --mode=development",
-    "build": "webpack --mode=production"
+    "build-watch": "webpack --mode=development -w",
+    "build": "webpack --mode=production",
+    "nodemon": "nodemon ./build/server.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +21,8 @@
     "@types/react-dom": "^17.0.3",
     "file-loader": "^6.2.0",
     "koa": "^2.13.1",
+    "mysql2": "^2.2.5",
+    "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "ts-loader": "^9.1.2",
