--- a/server/package.json
+++ b/server/package.json
@@ -19,12 +19,14 @@
     "@types/koa__router": "^8.0.4",
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.3",
+    "@types/redis": "^2.8.28",
     "file-loader": "^6.2.0",
     "koa": "^2.13.1",
     "mysql2": "^2.2.5",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "redis": "^3.1.2",
     "ts-loader": "^9.1.2",
     "typescript": "^4.2.4",
     "webpack": "^5.36.2",
