--- a/server/package.json
+++ b/server/package.json
@@ -16,12 +16,16 @@
   "dependencies": {
     "@koa/router": "^10.0.0",
     "@types/koa": "^2.13.1",
+    "@types/koa-static": "^4.0.1",
     "@types/koa__router": "^8.0.4",
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.3",
     "@types/redis": "^2.8.28",
+    "css-loader": "^5.2.4",
     "file-loader": "^6.2.0",
+    "html-loader": "^2.1.2",
     "koa": "^2.13.1",
+    "koa-static": "^5.0.0",
     "mysql2": "^2.2.5",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
