--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm-run-all --parallel build-watch nodemon",
+    "start": "yarn build-env & npm-run-all --parallel build-watch nodemon",
     "build-env": "webpack --mode=development",
     "build-watch": "webpack --mode=development -w",
     "build": "webpack --mode=production",
