--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,8 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.1",
+    "craco": "^0.0.3",
+    "craco-alias": "^3.0.0",
     "http-proxy-middleware": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
