configurate paths but when build is will vanish

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -19,11 +19,13 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    
     "paths": {
-      "@/**/*": [
-        "./src/**/*"
+      "@/*": [
+        "./src/models/*"
       ]
-    },
-  }
+    },  
+  },
+  "include": [
+    "src"
+  ]
 }
