--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "craco": "^0.0.3",
     "craco-alias": "^3.0.0",
+    "craco-less": "^1.17.1",
     "http-proxy-middleware": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -21,9 +22,9 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
